feat: tabs layout

--- a/src/global.less
+++ b/src/global.less
@@ -17,7 +17,15 @@ body,
 canvas {
   display: block;
 }
-
+.rumtime-tabs-layout {
+  margin: -24px -24px 0;
+  .ant-tabs-bar {
+    margin-bottom: 24px;
+  }
+  .ant-tabs-tabpane {
+    margin: 0 24px;
+  }
+}
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
